inscurepod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: insecure-pod
spec:
  containers:
  - name: demo-container
    image: busybox:latest
    command: ["sleep", "3600"]
    volumeMounts:
     - name: host-root
       mountPath: /hostyomi // it would be mounted at /hostyomi inside the container
  volumes:
   - name: host-root
     hostPath:
       path: /

---

apiVersion: v1
kind: Pod
metadata:
  name: controlled-pod
spec:
  securityContext:
    #runAsNonRoot: true
    runAsUser: 1000
    runAsGroup: 2000
    fsGroup: 3000
  containers:
  - name: demo-container
    image: busybox:latest
    command: ["sleep", "3600"]
    volumeMounts:
     - name: host-root
       mountPath: /controlledpath // it would be mounted at /hostyomi inside the container
  volumes:
   - name: host-root
     hostPath:
       path: /

---
apiVersion: v1
kind: Pod
metadata:
  name: fsgroup-pod
spec:
  securityContext:
    #runAsNonRoot: true
    runAsUser: 1000
    runAsGroup: 2000
    fsGroup: 3000
  containers:
  - name: demo-container
    image: busybox:latest
    command: ["sleep", "3600"]
    volumeMounts:
     - name: sec-ctx-vol
       mountPath: /controlled
  volumes:
   - name: sec-ctx-vol
     emptyDir: {}
