otel.yaml
apiVersion: apps/v1
kind: Deployment  
metadata:
  name: otel-collector
  namespace: default
  labels:
    app: otel-collector
spec:
  replicas: 1       # <--- Added Replicas
  selector:
    matchLabels:
      app: otel-collector
  template:
    metadata:
      labels:
        app: otel-collector
    spec:
      # 1. Privileged is still required on EKS to read host logs
      containers:
      - name: otel-collector
        image: otel/opentelemetry-collector-contrib:latest
        securityContext:
          privileged: true
          runAsUser: 0
        
        command:
        - /otelcol-contrib
        - --config=/conf/otel-collector-config.yaml
        
        ports:
        - containerPort: 4317
          name: otlp-grpc
        - containerPort: 4318
          name: otlp-http
        - containerPort: 13133
          name: health
        
        volumeMounts:
        - name: otel-collector-config
          mountPath: /conf
        - name: varlogpods
          mountPath: /var/log/pods
          readOnly: true


        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        
        livenessProbe:
          httpGet:
            path: /
            port: 13133
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 13133
          initialDelaySeconds: 60
          periodSeconds: 5

      volumes:
      - name: otel-collector-config
        configMap:
          name: otel-collector-config
          items:
          - key: otel-collector-config.yaml
            path: otel-collector-config.yaml
      - name: varlogpods
        hostPath:
          path: /var/log/pods
